# assembly_counter

./: Cargo.toml  README.md  trace.txt.0
src/: lib.rs
src/assembly_counter/: assembly_counter.s  instructions.json
