[package]
name = "assembly_counter"
version = "0.1.0"
edition = "2021"

[dependencies]

[dev-dependencies]
mollusk-svm = "0.7.2"
solana-program-error = "3.0"
solana-instruction = "3.3.0"
solana-address = "2.4.0"
solana-pubkey = { version = "3.0.0", features = ["curve25519"] }
solana-account = "3.4.0"

[features]
test-sbf = []